test/Runner/errors/tests/MI/TestSuite/Prepare3.runtime.js
eve("Suite", () => {
	suite("Suite", () => {}, "foo")
});